@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 1493 RMD160 aa6c61d31e0565e0b8d2d6e72078bcaec6dee1ea SHA1 7f31857d3854de26a1470edbe6e9d2449a6f291e SHA256 ffb506dd56553f6e9a9e256790ce8f9cdb281b876c6ea2ccb59daa829abe075d
-EBUILD midori-9999.ebuild 1549 RMD160 e372b7ff9f22487b0fe3bb4cac9e73c7b20ff56f SHA1 5d88cc654aad8dcf3a739235968632fb9e163278 SHA256 782b20f261f8dca0bf6c9cac6cef4e14da709ccf2578dd14f29b0b5c685fc6c1
-MISC ChangeLog 675 RMD160 fca105b2578cbfd341f9dda8a17a1043ed788aef SHA1 0fffba40cf38070546807fa86da81f3aec3eb867 SHA256 3d837b56f67c814ea68c49ba180843fae57e52eaf52a481fd76923b78ca3089f
+EBUILD midori-0.1.1.ebuild 1513 RMD160 8f7bcde5b3ef2a0bd74fa08e192a9fdb340c7a80 SHA1 e24b0c3590acde157645bd43170ee62d09204a2a SHA256 7a561070a9c2eadc08eca75de6169c184fc205d145f72a27459ff5e6481b75e2
+EBUILD midori-9999.ebuild 1569 RMD160 4ddf274bb1ec39b581e02506747a0f494bbf31c5 SHA1 9ca22fc02be1abed85f4a9a931e11a0504ead3ec SHA256 aa2c7dd2d409ea90b3f83b416b81323b3c8316ae5e0c4774fbb843d3ae2f2200
+MISC ChangeLog 891 RMD160 2e3bdc4954bcbbc365da2f93ac6ae8927d30be59 SHA1 120b932cfb797c40f5e3de1abd03261b23472c2c SHA256 f926124618b4513c28baee388b3a2c8bba5ef0cc9123a4fc90b1a5ac916e1d8f
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk7Rl0ACgkQKhnDs22gwa8N7QCgmri1QjHVwnkxKFcduMkjOoOE
-eBoAoOtEfy9v7zSdEvRAera87ztQqCEg
-=5qbH
+iEYEARECAAYFAkk71OMACgkQKhnDs22gwa9szQCbBjXwIN4wqQMHNw9dpvnFHT7b
+eAcAoIy2EChKPhYTgs0nBdio9KR+V5pU
+=DMKx
 -----END PGP SIGNATURE-----
