@@ -17,15 +17,16 @@ IUSE="doc nls soup sqlite"
 
 RDEPEND=">=dev-libs/glib-2.16:2
 	dev-libs/libxml2
-	gnome-base/librsvg
 	net-libs/webkit-gtk
 	>=x11-libs/gtk+-2.10:2
 	soup? ( net-libs/libsoup:2.4 )
 	sqlite? ( dev-db/sqlite )"
 DEPEND="${RDEPEND}
+	gnome-base/librsvg
 	doc? ( dev-python/docutils
 		dev-util/gtk-doc )
-	nls? ( sys-devel/gettext )"
+	nls? ( sys-devel/gettext
+		dev-util/intltool )"
 
 pkg_setup() {
 	ewarn "Midori is not yet in a too mature status, so expect some minor things to break"
