@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
+  midori-9999.ebuild:
+  Moved librsvg dependency out of RDEPEND as it's only needed during
+  build-time and added missing intltool dependency
+
   07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-9999.ebuild:
   Added USE=doc for user/API docs
 
